<resources>
    <string name="app_name">WanderWord</string>

    <!-- For MainActivity/Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="existing_user">Already have an account? Click here to login!</string>
    <string name="new_user">First time Wanderer? Register here!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <!-- For Bottom Nav in HomeActivity -->
    <string name="settings">""</string>
    <string name="friends">""</string>
    <string name="collection">""</string>
    <string name="home">""</string>

    <!-- For SettingActivity -->
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="user_name">User Name</string>
    <string name="change_password">Change Password</string>
    <string name="other_settings">Other Settings</string>
    <string name="profile_settings">Wanderer Profile Settings</string>

    <!-- For LocationDetailActivity/GameFragment -->
    <string name="location_description_template">Description of %s</string>
    <string name="location_name_label">Location:</string>
    <string name="location_details_label">Details:</string>
    <string name="check">Check</string>
    <string name="enter_your_guess">Enter your guess</string>
    <string name="check_guess">Check Guess</string>
    <string name="instructions">WanderGem Word Game!\n(Click For Instructions) </string>
    <string name="congratulations_message">Congratulations You Guessed Correctly!</string>
    <string name="visit_collection">Visit Collection</string>
    <string name="wandergem_description_blue">Visit Collection</string>
    <string name="wandergem_description_purple">Visit Collection</string>
    <string name="wandergem_description_green">Visit Collection</string>
    <string name="wandergem_description_red">Visit Collection</string>
    <string name="wandergem_description_yellow">Visit Collection</string>


    <!-- For Collection -->
    <string name="collected_rewards">Collected WanderGems</string>
    <string name="not_collected_rewards">Locked WanderGems</string>
    <string name="wandergem_description">"A new WanderGem has been added to your collection! "</string>
    <string name="debug_text">Debug Text:</string>

</resources>