<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Profile Settings Section -->
    <TextView
        android:id="@+id/textViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_settings"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:layout_marginBottom="8dp"/>

    <!-- User Image -->
    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_default_profile_image"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <!-- Change Profile Picture Button -->
    <Button
        android:id="@+id/btnChangeProfilePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_picture"
        android:textColor="@color/purple_700"
        android:layout_marginBottom="16dp"/>

    <!-- Email -->
    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:textColor="@color/orange"
        android:enabled="false"/> <!-- Email is not editable in settings -->


    <!-- User Name -->
    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="text"
        android:layout_marginBottom="48dp"
        android:textColor="@color/orange"
        android:padding="8dp"/>

    <!-- Change Password Button -->
    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/purple_700"
        android:layout_marginBottom="16dp"/>

    <!-- Other Relevant Settings Section -->
    <TextView
        android:id="@+id/textViewOtherSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_settings"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:textColor="@color/orange"
        android:layout_marginBottom="8dp"/>

    <!-- Bottom navigation bar -->
    <com.bignerdranch.android.wanderword.MyBottomNavbar
        android:id="@+id/myBottomNavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.WanderWord"
        android:layout_gravity="bottom"
        android:layout_marginTop="175dp"
        app:menu="@menu/bottom_navigation_menu"
        app:itemIconSize="24dp"/>

</LinearLayout>
